--- a/bank-automat/lahjoitus.ui
+++ b/bank-automat/lahjoitus.ui
@@ -885,7 +885,7 @@ QPushButton:pressed{
         </widget>
        </item>
        <item row="0" column="0">
-        <widget class="QPushButton" name="Lahjoitus_1_euro">
+        <widget class="QPushButton" name="Lahjoitus_1_euroa">
          <property name="minimumSize">
           <size>
            <width>200</width>
@@ -1977,7 +1977,7 @@ QPushButton:pressed{
          </colorrole>
          <colorrole role="PlaceholderText">
           <brush brushstyle="SolidPattern">
-           <color alpha="128">
+           <color alpha="255">
             <red>255</red>
             <green>255</green>
             <blue>255</blue>
@@ -2051,7 +2051,7 @@ QPushButton:pressed{
          </colorrole>
          <colorrole role="PlaceholderText">
           <brush brushstyle="SolidPattern">
-           <color alpha="128">
+           <color alpha="255">
             <red>255</red>
             <green>255</green>
             <blue>255</blue>
@@ -2125,7 +2125,7 @@ QPushButton:pressed{
          </colorrole>
          <colorrole role="PlaceholderText">
           <brush brushstyle="SolidPattern">
-           <color alpha="128">
+           <color alpha="255">
             <red>255</red>
             <green>255</green>
             <blue>255</blue>
@@ -2576,7 +2576,7 @@ QPushButton:pressed{
       </colorrole>
       <colorrole role="PlaceholderText">
        <brush brushstyle="SolidPattern">
-        <color alpha="128">
+        <color alpha="255">
          <red>255</red>
          <green>255</green>
          <blue>255</blue>
@@ -2650,7 +2650,7 @@ QPushButton:pressed{
       </colorrole>
       <colorrole role="PlaceholderText">
        <brush brushstyle="SolidPattern">
-        <color alpha="128">
+        <color alpha="255">
          <red>255</red>
          <green>255</green>
          <blue>255</blue>
@@ -2724,7 +2724,7 @@ QPushButton:pressed{
       </colorrole>
       <colorrole role="PlaceholderText">
        <brush brushstyle="SolidPattern">
-        <color alpha="128">
+        <color alpha="255">
          <red>255</red>
          <green>255</green>
          <blue>255</blue>
@@ -2856,7 +2856,7 @@ QPushButton:pressed{
       </colorrole>
       <colorrole role="PlaceholderText">
        <brush brushstyle="SolidPattern">
-        <color alpha="128">
+        <color alpha="255">
          <red>255</red>
          <green>255</green>
          <blue>255</blue>
@@ -2930,7 +2930,7 @@ QPushButton:pressed{
       </colorrole>
       <colorrole role="PlaceholderText">
        <brush brushstyle="SolidPattern">
-        <color alpha="128">
+        <color alpha="255">
          <red>255</red>
          <green>255</green>
          <blue>255</blue>
@@ -3004,7 +3004,7 @@ QPushButton:pressed{
       </colorrole>
       <colorrole role="PlaceholderText">
        <brush brushstyle="SolidPattern">
-        <color alpha="128">
+        <color alpha="255">
          <red>255</red>
          <green>255</green>
          <blue>255</blue>
